[ADD] Integração com listagem de consultas por médico e data, e algumas pequenas atualizações